correccion favicon.ico

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./vendor/normalize.css" />
   <link rel="stylesheet" href="./pages/index.css" />
-  <link rel="shortcut icon" href="myicon_circles.ico" />
+  <link rel="shortcut icon" href="favicon.ico" />
 
 </head>
 <body>
   <div class="page">
-    <p>Este es un párrafo de prueba.</p>
-    <h1>Este es un encabezado de prueba</h1>
+    <h1>Cafeteria Dalyn</h1>
+    <p>Este es un texto de prueba.</p>
     <header class="header"></header>
     <main class="content"></main>
     <footer class="footer"></footer>
