--- a/index.html
+++ b/index.html
@@ -17,11 +17,16 @@
 </head>
 <body>
   <div class="page">
-    <h1>Cafeteria Dalyn</h1>
-    <p>Este es un texto de prueba.</p>
-    <header class="header"></header>
-    <main class="content"></main>
-    <footer class="footer"></footer>
+    <header class="header">
+    </header>
+    <main class="content">
+      <section class="recipes">
+      </section>
+      <section class="reservation">
+      </section>
+    </main>
+    <footer class="footer">
+    </footer>
   </div>
 
 </body>
