--- a/index.html
+++ b/index.html
@@ -37,14 +37,54 @@
     para darte energía y motivar tu creatividad.
   </p>
 
-  <img src="./images/inside_coffee_shop.png" alt="Interior de la cafetería" class="header__image" />
+  <img class="header__image" src="./images/inside_coffee_shop.png" alt="Interior de la cafetería"/>
+
+  <div class="header__footer">
+
+  <div class="header__hours">
+    <p class="header__paragraph">Horario</p>
+    <p class="header__paragraph">Lunes a Viernes (de 10:00h a 19:00h)</p>
+    <p class="header__paragraph">Sábados y Domingos (de 11:00h a 18:00h)</p>
+  </div>
+
+  <p class="header__address">
+    Avenida del Éxito 200, Ciudad Triple Peaks
+  </p>
+
+</div>
 </header>
-    <main class="content">
-      <section class="recipes">
+
+      <main class="content">
+      <section class="recipes" id="recipes"> <h2 class="recipes__title">Recetas</h2>
+
+        <p class="recipes__subtitle"> Echa un vistazo a las recetas que hemos reunido para que elabores tus propios snacks.
+
+        </p>
+
+        <div class="recipes__videos">
+
+    <div class="recipes__video-item">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/j6VlT_jUVPc?si=5a7rLYwAHKlvi19e" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      <div class="recipes__video-caption">
+        <span>Receta en Aeropress</span>
+        <span>~5 min</span>
+      </div>
+    </div>
+
+    <div class="recipes__video-item">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/st571DYYTR8?si=huYPRPPrrkAM6aq-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      <div class="recipes__video-caption">
+        <span>Receta en cafetera francesa</span>
+        <span>~15 min</span>
+      </div>
+    </div>
+
+  </div>
       </section>
+
       <section class="reservation">
       </section>
-    </main>
+      </main>
     <footer class="footer">
     </footer>
   </div>
