--- a/index.html
+++ b/index.html
@@ -78,11 +78,10 @@
         <span>~15 min</span>
       </div>
     </div>
-
   </div>
       </section>
 
-      <section class="reservation">
+      <section class="reservation" id="reservation">
       </section>
       </main>
     <footer class="footer">
