--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <p class="header__paragraph">Sábados y Domingos (de 11:00h a 18:00h)</p>
   </div>
 
-  <p class="header__address">
+  <p class="header__paragraph">
     Avenida del Éxito 200, Ciudad Triple Peaks
   </p>
 
@@ -64,7 +64,9 @@
         <div class="recipes__videos">
 
     <div class="recipes__video-item">
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/j6VlT_jUVPc?si=5a7rLYwAHKlvi19e" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      <iframe class="recipes__iframe"
+     src="https://www.youtube.com/embed/j6VlT_jUVPc?si=5a7rLYwAHKlvi19e" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+    </iframe>
       <div class="recipes__video-caption">
         <span>Receta en Aeropress</span>
         <span>~5 min</span>
@@ -72,7 +74,9 @@
     </div>
 
     <div class="recipes__video-item">
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/st571DYYTR8?si=huYPRPPrrkAM6aq-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      <iframe class="recipes__iframe"
+      src="https://www.youtube.com/embed/st571DYYTR8?si=huYPRPPrrkAM6aq-" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+    </iframe>
       <div class="recipes__video-caption">
         <span>Receta en cafetera francesa</span>
         <span>~15 min</span>
