--- a/index.html
+++ b/index.html
@@ -86,7 +86,33 @@
       </section>
 
       <section class="reservation" id="reservation">
-      </section>
+        <h2 class="reservation__title">Reservar una mesa</h2>
+        <form class="reservation__form form">
+    <fieldset class="form__fieldset">
+
+      <label for="name" class="form__label">Nombre *</label>
+      <input type="text" class="form__input" id="name" placeholder="Nombre" required>
+
+      <label for="diners" class="form__label">Número de comensales *</label>
+      <input type="number" class="form__input" id="diners" placeholder="1-8" min="1" max="8" required>
+
+      <label for="datetime" class="form__label">Fecha y hora *</label>
+      <input type="datetime-local" class="form__input" id="datetime" required>
+
+      <label for="email" class="form__label">Tu correo electrónico *</label>
+      <input type="email" class="form__input" id="email" placeholder="email@email.com" required>
+
+      <button type="submit" class="form__button">Reservar una mesa</button>
+
+      <label class="form__label form__label_type_checkbox">
+        <input type="checkbox" class="form__checkbox" required>
+        <span class="form__checkbox-text">Acepto los términos de uso</span>
+      </label>
+
+    </fieldset>
+  </form>
+</section>
+
       </main>
     <footer class="footer">
     </footer>
