--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
   <meta name="description" content="Cafetería Dalyn - Disfruta del mejor café artesanal en un ambiente acogedor. Especialistas en café de origen único y repostería casera.">
   <meta name="author" content="Bruno Montes">
   <meta name="keywords" content="café, cafetería, espresso, cappuccino, repostería, Dalyn">
-  <title>Cafeteria Dalyn</title>
+  <title>Cafetería Dalyn</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./vendor/normalize.css" />
   <link rel="stylesheet" href="./pages/index.css" />
   <link rel="shortcut icon" href="favicon.ico" />
 
@@ -65,21 +64,21 @@
 
     <div class="recipes__video-item">
       <iframe class="recipes__iframe"
-     src="https://www.youtube.com/embed/j6VlT_jUVPc?si=5a7rLYwAHKlvi19e" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+     src="https://www.youtube.com/embed/DM6ar6ncbeA?si=HJZ9YD-sLx9cleft" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
     </iframe>
       <div class="recipes__video-caption">
-        <span>Receta en Aeropress</span>
-        <span>~5 min</span>
+        <span>Receta de Carajillo</span>
+        <span>~4 min</span>
       </div>
     </div>
 
     <div class="recipes__video-item">
       <iframe class="recipes__iframe"
-      src="https://www.youtube.com/embed/st571DYYTR8?si=huYPRPPrrkAM6aq-" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+      src="https://www.youtube.com/embed/jwwj0Cjm-yY?si=DppAUQsnIw4fiksX" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
     </iframe>
       <div class="recipes__video-caption">
-        <span>Receta en cafetera francesa</span>
-        <span>~15 min</span>
+        <span>Receta de Café Irlandés</span>
+        <span>~1 min</span>
       </div>
     </div>
   </div>
@@ -115,6 +114,31 @@
 
       </main>
     <footer class="footer">
+     <div class="footer__content">
+
+      <img src="./images/logo_coffeeshop_light.svg" alt="Logotipo de Cafetería Dalyn" class="footer__logo">
+
+      <div class="footer__circle"></div>
+
+      <nav class="footer__social">
+        <h3 class="footer__social-heading">Redes sociales</h3>
+        <ul class="footer__list">
+          <li class="footer__list-item">
+            <a href="#" class="footer__social-link">
+              <img src="./images/facebook_white.svg" alt="Facebook" class="footer__social-icon">
+              Facebook
+            </a>
+          </li>
+          <li class="footer__list-item">
+            <a href="#" class="footer__social-link">
+              <img src="./images/instagram_white.svg" alt="Instagram" class="footer__social-icon">
+              Instagram
+            </a>
+          </li>
+        </ul>
+      </nav>
+      </div>
+      <p class="footer__copyright">© 2026 Cafetería Dalyn. Todos los derechos reservados.</p>
     </footer>
   </div>
 
